heroes finalizado con actualización de flexbox

--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
     <title>Heroes</title>
 </head>
 <body>
-    <header><div class="header-text">Descuentos 20%</div></header>
-    <h1><div class="h1-text">Heroes</div></h1>
+    
+    <header>
+        <div>Descuentos 20%</div>
+    </header>
+
+    <h1>Heroes</h1>
 
     <section>
+        
         <article class="caja-perfil1">
             <img class="heart" src="./img/heart.png" alt="corazón">
             <img class="fondo-perfil" src="./img/fondo_batman.png" alt="fondo batman">
